--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal 
 title: IFT6266 - Project Blog
-description: This is the blog created to document all the steps and results obtained during the project for the IFT6266 course.
+description: This is the blog created to register all steps and results obtained during the project of IFT6266 course.
